elimine carpetas que no eran parte del proyecto y acomode las que vou a utilizar en mi proyecto

--- a/boostrap_grid/index6.html
+++ b/boostrap_grid/index6.html
@@ -7,7 +7,7 @@
     rel="stylesheet" 
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
     crossorigin="anonymous"/>
-    <link rel="stylesheet" href="./style6.css">
+    <link rel="stylesheet" href="../css/style6.css">
     <title>BoostrapGrid</title>
 </head>
 <body>
@@ -23,18 +23,18 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../boostrap_grid/nosotros6.html">NOSOTROS</a>
+                <a class="nav-link" aria-current="page" href="../pages/nosotros6.html">NOSOTROS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../boostrap_grid/contactenos6.html">CONTACTENOS</a>
+                <a class="nav-link" href="../pages/contactenos6.html">CONTACTENOS</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                  VEHICULOS
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="../boostrap_grid/nuevos6.html">NUEVOS</a></li>
-                  <li><a class="dropdown-item" href="../boostrap_grid/usados6.html">USADOS</a></li>
+                  <li><a class="dropdown-item" href="../pages/nuevos6.html">NUEVOS</a></li>
+                  <li><a class="dropdown-item" href="../pages/usados6.html">USADOS</a></li>
                 </ul>
                 </li>
                 </ul>
@@ -78,7 +78,7 @@
               <label for="precio">Precio:</label>
               <input type="number" class="form-control" id="precio" placeholder="Ingrese el precio del auto">
             </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
+            
           </form>
         </div>
       </section>
